--- a/ToDo.txt
+++ b/ToDo.txt
@@ -4,6 +4,7 @@ No permitir naves pegadas (putship)
 Testear ingreso manual de naves (una paja)
 Decidir quien empieza
 La regla de 15 segundos para tomar un disparo (es necesario eso?)
+Mejores comentarios
 
 
 
